# sourcesdk

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  AGENTS.md  AMBuildScript  CMakeGameManifests.json  CMakeLists.txt  CMakePresets.json  PackageScript
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  cmake-multi-platform.yml
cmake/: protobuf.cmake  protobufs.cmake  sourcesdk.cmake
cmake/platform/: linux.cmake  macos.cmake  windows.cmake
cmake/sourcesdk/: game.cmake  manifests.cmake  proto.cmake
common/: ConfigManager.h  IRunGameEngine.h  IVGuiModule.h  IVGuiModuleLoader.h  blackbox_helper.cpp  blackbox_helper.h  compiledcaptionswap.cpp  debug_dll_check.cpp  ifilesystemopendialog.h  language.cpp  language.h  netmessages.proto  protocol.h  qlimits.h  randoverride.cpp  steamid.cpp  studiobyteswap.cpp  studiobyteswap.h
common/GameUI/: IGameConsole.h  IGameUI.h
common/ServerBrowser/: IServerBrowser.h
common/matchmaking/: mm_helpers.h
common/vgui_surfacelib/: ifontsurface.h
dedicated_main/: main.cpp  resource.h
entity2/: entityidentity.cpp  entityinstance.cpp  entitykeyvalues.cpp  entitysystem.cpp
game/client/: AnimateSpecificTextureProxy.cpp  C_MaterialModifyControl.cpp  C_WaterLODControl.cpp  EffectsClient.cpp  IsNPCProxy.cpp  MonitorMaterialProxy.cpp  ProxyHealth.cpp  ScreenSpaceEffects.cpp  TeamBitmapImage.cpp  ViewConeImage.cpp  WaterLODMaterialProxy.cpp  WorldDimsProxy.cpp  achievement_notification_panel.cpp  animatedentitytextureproxy.cpp  animatedoffsettextureproxy.cpp  animatedtextureproxy.cpp  animationlayer.h  baseanimatedtextureproxy.cpp  baseanimatedtextureproxy.h  baseclientrendertargets.cpp  beamdraw.cpp  beamdraw.h  bone_merge_cache.cpp  bone_merge_cache.h  bonetoworldarray.h  c_ai_basehumanoid.cpp  c_ai_basenpc.cpp  c_ai_basenpc.h  c_baseanimating.cpp  c_baseanimating.h  c_baseanimatingoverlay.cpp  c_baseanimatingoverlay.h  c_basecombatcharacter.cpp  c_basecombatcharacter.h  c_basecombatweapon.cpp  c_basecombatweapon.h  c_basedoor.cpp  c_basedoor.h  c_baseentity.cpp  c_baseflex.cpp  (+387 more)
game/missionchooser/: VMFExporter.cpp  asw_key_values_database.cpp  asw_location_grid.cpp  asw_location_grid.h  asw_map_builder.cpp  asw_mission_chooser_source_local.cpp  asw_mission_chooser_source_local.h  asw_mission_text_database.cpp  asw_npcs.cpp  asw_spawn_selection.cpp  asw_spawn_selection.h  tile_check.h
game/server/: AI_Interest_Target.cpp  BaseAnimatingOverlay.cpp  BaseAnimatingOverlay.h  BasePropDoor.h  CRagdollMagnet.cpp  CRagdollMagnet.h  CommentarySystem.cpp  EffectsServer.cpp  EntityDissolve.cpp  EntityFlame.cpp  EntityFlame.h  EntityFreezing.cpp  EntityFreezing.h  EntityParticleTrail.cpp  EnvBeam.cpp  EnvFade.cpp  EnvHudHint.cpp  EnvLaser.cpp  EnvMessage.cpp  EnvShake.cpp  EnvSpark.cpp  EventLog.cpp  RagdollBoogie.cpp  RagdollBoogie.h  SkyCamera.cpp  SkyCamera.h  TemplateEntities.h  actanimating.cpp  ai_activity.cpp  ai_baseactor.h  ai_basehumanoid.cpp  ai_basenpc.cpp  ai_basenpc_flyer.cpp  ai_basenpc_flyer_new.cpp  ai_basenpc_movement.cpp  ai_basenpc_physicsflyer.cpp  ai_basenpc_schedule.cpp  ai_basenpc_squad.cpp  ai_behavior.cpp  ai_behavior.h  (+391 more)
game/shared/: .gitignore  GameStats.h  ModelSoundsCache.cpp  SceneCache.cpp  SoundEmitterSystem.cpp  Sprite.h  SpriteTrail.cpp  SpriteTrail.h  (+158 more)
interfaces/: .gitignore  interfaces.cpp  interfaces.sln  interfaces.vcxproj  interfaces.vcxproj.filters
linux_sdk/: .gitignore  Makefile  Makefile.tier1
materialsystem/: IHardwareConfigInternal.h  IShaderSystem.h  imaterialinternal.h  imaterialsysteminternal.h  materialsystem_global.cpp  materialsystem_global.h
mathlib/: 3dnow.cpp  IceKey.cpp  anorms.cpp  datagen.pl  halton.cpp  imagequant.cpp  lightdesc.cpp  mathlib.sln  mathlib.vcproj  mathlib.vcxproj  mathlib.vcxproj.filters  mathlib_base.cpp  polyhedron.cpp  quantize.cpp  sse.cpp  sseconst.cpp  vector.cpp  vmatrix.cpp
networksystem/: networkmessages.cpp  networksystem_protomessages.proto
public/: BitmapFontFile.h  IGameUIFuncs.h  IHammer.h  ScratchPadUtils.cpp  SoundParametersInternal.cpp  UtlCachedFileData.h  XUnzip.cpp  basehandle.h  bittools.h  bitvec.h  bone_accessor.cpp  bone_accessor.h  bone_setup.h  branchingsingleton.h  bspfile.h  bspflags.h  bsptreedata.cpp  bsptreedata.h  builddisp.cpp  builddisp.h  captioncompiler.h  cdll_int.h  chunkfile.cpp  chunkfile.h  closedcaptions.cpp  closedcaptions.h  cmodel.h  collisionutils.cpp  collisionutils.h  color.h  const.h  coordsize.h  datamap.h  delayedcall.h  disp_common.cpp  disp_common.h  disp_powerinfo.h  dispcoll.h  dispcoll_common.cpp  dispcoll_common.h  (+122 more)
sym/: exported_symbols.lds
tests/: CMakeLists.txt  bufferstring.cpp  keyvalues3.cpp  keyvalues3_headers.cpp  smoke_main.cpp  tier0_utl_headers.cpp  tier1_utl_headers.cpp  utlarray.cpp  utlblockmemory.cpp  utlbuffer.cpp  utldict.cpp  utlfixedmemory.cpp  utlflags.cpp  utlhash.cpp  utlhashtable.cpp  utlleanvector.cpp  utllinkedlist.cpp  utlmap.cpp  utlmemory.cpp  utlmultilist.cpp  utlpair.cpp  utlpriorityqueue.cpp  utlqueue.cpp  utlrbtree.cpp  utlscratchmemory.cpp  utlsignalslot.cpp  utlsortvector.cpp  utlstack.cpp  utlstring.cpp  utlstringmap.cpp  utlstringtoken.cpp  utlsymbol.cpp  utlvector.cpp
tests/common/: assert.h  macros.h  runner.cpp  runner.h  source2_main.cpp  source2_main.h
tests/data/keyvalues3/: buffer.kv3  example.kv3  no_header.kv3  typeex.kv3  value.json  value.kv  value.kv3
tier1/: AMBuilder  KeyValues.cpp  NetAdr.cpp  appinstance.cpp  bitbuf.cpp  byteswap.cpp  characterset.cpp  checksum_crc.cpp  checksum_md5.cpp  circularbuffer.cpp  commandbuffer.cpp  convar.cpp  datamanager.cpp  exprevaluator.cpp  fileio.cpp  generate_constructors.pl  generichash.cpp  interface.cpp  keyvalues3.cpp  kvpacker.cpp  lzmaDecoder.cpp  lzss.cpp  memoverride_dummy.cpp  mempool.cpp  memstack.cpp  miniprofiler_hash.cpp  murmurhash3.cpp  newbitbuf.cpp  pathmatch.cpp  processor_detect.cpp  processor_detect_linux.cpp  rangecheckedvar.cpp  sparsematrix.cpp  splitstring.cpp  stringpool.cpp  strtools.cpp  strtools_unicode.cpp  tier1-2005.vcproj  tier1.cpp  tier1.sln  (+12 more)
(+1215 files in other folders)
